# chat_interface

./: README.md
install/chat_interface/lib/chat_interface/: bob_subscriber  timothy_publisher
install/chat_interface/share/chat_interface/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/chat_interface/share/chat_interface/cmake/: chat_interfaceConfig.cmake
log/: latest_build
src/chat_interface/: CMakeLists.txt
src/chat_interface/src/: bob_subscriber.cpp  timothy_publisher.cpp
